# GpCore2

./: .gitattributes  .gitignore  CMakeLists.txt  GpCore.hpp  GpCore.pro  GpCore2.pro  GpCore_global.hpp  LICENSE  QtGlobalPro.pri  README.md
.github/workflows/: codeql-analysis.yml
Algorithms/: GpAlgorithms.hpp  GpAverage.hpp  GpDistributeProportional.hpp  GpFind.hpp  GpSplit.hpp
Asm/: GpAsm.hpp  GpAsmSpinPause.hpp
Config/: Config.pro  GpCompilerFeatures.hpp  GpConfig.cpp  GpConfig.hpp  GpConfig_arch_x86.hpp  GpConfig_arch_x86_64.hpp  GpConfig_os_browser.hpp  GpConfig_os_ios_simulator.hpp  GpConfig_os_linux.hpp  GpConfig_os_windows.hpp  GpEnvironmentDetector.hpp
Config/IncludeExt/: boost_flat_map.hpp  boost_flat_set.hpp  boost_small_vector.hpp  fmt.hpp  windows.hpp
Constexpr/: GpConstexprArray.hpp  GpConstexprIterator.hpp  GpConstexprUtils.hpp
Doc/: Building.md  Reflection.md
EventBus/: GpEvent.cpp  GpEvent.hpp  GpEventBus.cpp  GpEventBus.hpp  GpEventPublisher.cpp  GpEventPublisher.hpp  GpEventSubscriber.cpp  GpEventSubscriber.hpp
Exceptions/: GpCeExceptions.hpp  GpException.cpp  GpException.hpp  GpExceptionDesc.cpp  GpExceptionDesc.hpp  GpExceptionUtils.hpp  GpExceptions.hpp  GpExceptionsSink.cpp  GpExceptionsSink.hpp
GpReflection/: GpReflectConcepts.hpp  GpReflectContainerType.cpp  GpReflectContainerType.hpp  GpReflectManager.cpp  GpReflectManager.hpp  GpReflectModel.cpp  GpReflectModel.hpp  GpReflectModelSource.hpp  GpReflectModelSourceFactory.hpp  GpReflectObjWrapVector.hpp  GpReflectObject.cpp  GpReflectObject.hpp  GpReflectObjectDynamic.cpp  GpReflectObjectDynamic.hpp  GpReflectObjectDynamicUtils.cpp  GpReflectObjectDynamicUtils.hpp  GpReflectObjectFactory.hpp  GpReflectProp.cpp  GpReflectProp.hpp  GpReflectPropFlags.cpp  GpReflectPropFlags.hpp  GpReflectPropGetter.hpp  GpReflectPropUtils.cpp  GpReflectPropUtils.hpp  GpReflectType.cpp  GpReflectType.hpp  GpReflectUtils.cpp  GpReflectUtils.hpp  GpReflectUtils_AssignValue.cpp  GpReflectUtils_AssignValue.hpp  GpReflectUtils_IsEqual.cpp  GpReflectUtils_IsEqual.hpp  GpReflectUtils_Iterator.cpp  GpReflectUtils_Iterator.hpp  GpReflectUtils_TotalMemoryUse.cpp  GpReflectUtils_TotalMemoryUse.hpp  GpReflectVisitor.hpp  GpReflection.cpp  GpReflection.hpp  GpReflection.pro  (+3 more)
GpReflection/Builders/: GpReflectBuilders.hpp  GpReflectModelBuilder.cpp  GpReflectModelBuilder.hpp  GpReflectModelPropBuilder.cpp  GpReflectModelPropBuilder.hpp  GpReflectObjectBuilder.cpp  GpReflectObjectBuilder.hpp  GpReflectPropBuilder.cpp  GpReflectPropBuilder.hpp
GpReflection/Diff/: GpReflectDiffArray.hpp  GpReflectDiffDelta.cpp  GpReflectDiffDelta.hpp  GpReflectDiffPropBLOB.cpp  GpReflectDiffPropBLOB.hpp  GpReflectDiffPropEnum.cpp  GpReflectDiffPropEnum.hpp  GpReflectDiffPropEnumFlags.cpp  GpReflectDiffPropEnumFlags.hpp  GpReflectDiffPropObject.cpp  GpReflectDiffPropObject.hpp  GpReflectDiffPropObjectSP.cpp  GpReflectDiffPropObjectSP.hpp  GpReflectDiffPropString.cpp  GpReflectDiffPropString.hpp  GpReflectDiffProp_Map.cpp  GpReflectDiffProp_Map.hpp  GpReflectDiffProp_VecBLOB.cpp  GpReflectDiffProp_VecBLOB.hpp  GpReflectDiffProp_VecDouble.cpp  GpReflectDiffProp_VecDouble.hpp  GpReflectDiffProp_VecFloat.cpp  GpReflectDiffProp_VecFloat.hpp  GpReflectDiffProp_VecObject.cpp  GpReflectDiffProp_VecObject.hpp  GpReflectDiffProp_VecObjectSP.cpp  GpReflectDiffProp_VecObjectSP.hpp  GpReflectDiffProp_VecSI16.cpp  GpReflectDiffProp_VecSI16.hpp  GpReflectDiffProp_VecSI32.cpp  GpReflectDiffProp_VecSI32.hpp  GpReflectDiffProp_VecSI64.cpp  GpReflectDiffProp_VecSI64.hpp  GpReflectDiffProp_VecSI8.cpp  GpReflectDiffProp_VecSI8.hpp  GpReflectDiffProp_VecString.cpp  GpReflectDiffProp_VecString.hpp  GpReflectDiffProp_VecUI16.cpp  GpReflectDiffProp_VecUI16.hpp  GpReflectDiffProp_VecUI32.cpp  (+11 more)
GpReflection/Models/: GpExceptionDesc.cpp  GpExceptionDesc.hpp  GpReflectDemoDesc.cpp  GpReflectDemoDesc.hpp  GpReflectModelDesc.cpp  GpReflectModelDesc.hpp  GpReflectModelDescUtils.cpp  GpReflectModelDescUtils.hpp  GpReflectModels.hpp  GpReflectPropDesc.cpp  GpReflectPropDesc.hpp
GpReflection/Serializers/: GpReflectSerializer.cpp  GpReflectSerializer.hpp  GpReflectSerializerCtx.hpp  GpReflectSerializerFactory.hpp  GpReflectSerializers.hpp
GpTasks/: GpTask.cpp  GpTask.hpp  GpTaskAccessor.hpp  GpTaskBase.cpp  GpTaskBase.hpp  GpTaskEnums.cpp  GpTaskEnums.hpp  GpTaskExecutor.cpp  GpTaskExecutor.hpp  GpTaskExecutorsPool.cpp  GpTaskExecutorsPool.hpp  GpTaskFactory.hpp  GpTaskGroupsManager.cpp  GpTaskGroupsManager.hpp  GpTaskLambda.cpp  GpTaskLambda.hpp  GpTaskLib.cpp  GpTaskLib.hpp  GpTaskPayloadStorage.cpp  GpTaskPayloadStorage.hpp  GpTaskScheduler.cpp  GpTaskScheduler.hpp  GpTaskState.cpp  GpTaskState.hpp  GpTaskThread.cpp  GpTaskThread.hpp  GpTaskVarStorage.cpp  GpTaskVarStorage.hpp  GpTasks.hpp  GpTasks.pro  GpTasksLib.cpp  GpTasksLib.hpp  GpTasks_global.hpp
GpTasks/Fibers/: GpFixedSizeStack.hpp  GpTaskFiber.cpp  GpTaskFiber.hpp  GpTaskFiberAccessor.hpp  GpTaskFiberBase.cpp  GpTaskFiberBase.hpp  (+17 more)
GpUtils/: GpMacro.hpp  GpMemOps.hpp  GpUtils.cpp  GpUtils.hpp  GpUtils.pro  GpUtilsLib.cpp  GpUtilsLib.hpp  GpUtils_global.hpp
Memory/: GpMemOps.hpp  GpMemory.hpp
Multithreading/: GpMultithreading.hpp
Pipeline/: GpPipeline.cpp  GpPipeline.hpp  GpPipelineEvaluateCtx.cpp  GpPipelineEvaluateCtx.hpp  GpPipelineEvaluator.cpp  GpPipelineEvaluator.hpp  GpPipelineManager.cpp  GpPipelineManager.hpp  GpPipelineNode.cpp  GpPipelineNode.hpp  GpPipelineNodeConnector.cpp  GpPipelineNodeConnector.hpp  GpPipelineNodeSocket.cpp  GpPipelineNodeSocket.hpp  GpPipelineNodeSocketDir.cpp  GpPipelineNodeSocketDir.hpp
RandomGenerators/: GpRandom.cpp  GpRandom.hpp  GpRandomDeviceIf.hpp  GpRandomDeviceWin.cpp  GpRandomDeviceWin.hpp  GpRandomGenerators.hpp  GpRandomStrMode.hpp  GpSRandom.cpp  GpSRandom.hpp
Types/: GpTypes.hpp
UnitTests/: GpUnitTest.cpp  GpUnitTest.hpp  GpUnitTestCtx.cpp  GpUnitTestCtx.hpp  GpUnitTestException.cpp  GpUnitTestException.hpp  GpUnitTestLayeredCtx.cpp  GpUnitTestLayeredCtx.hpp  GpUnitTestStreamOutCtx.cpp  GpUnitTestStreamOutCtx.hpp  GpUnitTests.hpp
Utils/: GpUtils.hpp
(+525 files in other folders)
